improve error handling in VSCodeAPI in case files can not be accessed within an extension and include the exception message